--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
   release:
     needs: build
     name: Release
-    # if: startsWith(github.ref, 'refs/tags/v') || (github.ref == 'refs/heads/main')
+    if: startsWith(github.ref, 'refs/tags/v') || (github.ref == 'refs/heads/main')
     runs-on: ubuntu-22.04
     env: 
       BINARIES: binaries/
@@ -66,6 +66,5 @@ jobs:
           ls -R .
       - name: Upload release binaries
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: "${{steps.download.outputs.download-path}}/**/snunit-*"
