--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
   release:
     needs: build
     name: Release
-    if: startsWith(github.ref, 'refs/tags/v') || (github.ref == 'refs/heads/main')
+    if: contains(github.ref, 'refs/tags/')
     runs-on: ubuntu-22.04
     env: 
       BINARIES: binaries/
